syntax = "proto3";
package gibson.tool;
option go_package = "github.com/zero-day-ai/sdk/api/gen/proto";

import "common.proto";

service ToolService {
    rpc GetDescriptor(ToolGetDescriptorRequest) returns (ToolDescriptor);
    rpc Execute(ToolExecuteRequest) returns (ToolExecuteResponse);
    rpc Health(ToolHealthRequest) returns (gibson.common.HealthStatus);
}

message ToolGetDescriptorRequest {}

message ToolDescriptor {
    string name = 1;
    string description = 2;
    string version = 3;
    repeated string tags = 4;
    gibson.common.JSONSchema input_schema = 5;
    gibson.common.JSONSchema output_schema = 6;
}

message ToolExecuteRequest {
    string input_json = 1;
    int64 timeout_ms = 2;
}

message ToolExecuteResponse {
    string output_json = 1;
    gibson.common.Error error = 2;
}

message ToolHealthRequest {}
